# advent-of-code

./: .editorconfig  .gitignore
2023/: CMakeLists.txt
2023/day1/: main.cpp
2023/day2/: main.cpp
2023/day3/: main.cpp
2023/day4/: main.cpp
2023/day5/: main.cpp
2024/day1/src/: main.rs
2024/day2/src/: main.rs
2024/day3/src/: main.rs
2024/day4/src/: main.rs
2024/day5/src/: main.rs
2024/day6/src/: main.rs
2024/day7/src/: main.rs
2024/day8/src/: main.rs
